[package]
name = "microservice_rs"
version = "0.1.0"
authors = ["Sean Quigley <seanpquig@gmail.com>"]

[dependencies]
log = "0.4.1"
env_logger = "0.5.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "1.7.0"
futures = "0.1.17"
hyper = "0.11.22"
diesel = { version = "1.0.0", features = ["postgres"] }
maud = "0.17.2"
